--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <servlet-api.version>2.4</servlet-api.version>
         <jsp-api.version>2.0</jsp-api.version>
         <ibatis-sqlmap.version>2.3.4.726</ibatis-sqlmap.version>
-        <mysql-connector-java.version>5.1.5</mysql-connector-java.version>
+        <mysql-connector-java.version>5.1.6</mysql-connector-java.version>
         <aspectjweaver.version>1.6.1</aspectjweaver.version>
         <cglib.version>2.2</cglib.version>
         <velocity.version>1.7</velocity.version>
@@ -30,6 +30,9 @@
         <mybatis.version>3.2.6</mybatis.version>
         <mybatis-spring.version>1.2.2</mybatis-spring.version>
         <com.infosource.version>1.0-SNAPSHOT</com.infosource.version>
+        <commons-beanutils.version>1.9.2</commons-beanutils.version>
+        <jstl.version>1.2</jstl.version>
+        <taglibs.version>1.2</taglibs.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -134,6 +137,11 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
                 <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons-beanutils.version}</version>
             </dependency>
             <!--<dependency>
                 <groupId>org.apache.ibatis</groupId>
